# soundenhancerC

./: CMakeLists.txt  Makefile  advanced_dynamics.h  advanced_eq_harmonics.h  build.sh  config_instrumental.json  config_master.json  config_podcast.json  config_vocal.json  enhanced_separation_processor.h  main.cpp  params.json  readme.md  spatial_processing.h  vocal_instrument_separator.h
